# nla

./: .gitignore  CMakeLists.txt
gauss_seidl/: gauss_seidl.cpp  gauss_seidl.h  gauss_seidl_main.cpp
jacobi/: jacobi_main.cpp
nal1/: nal1.cpp  nal1.h  plot.py
nal2/: nal2.cpp  nal2.h
nal3/: nal3.cpp  nal3.h  output.txt
nal4/: matrix.txt  nal4.cpp  nal4.h  to_mtx.py
nla_mehurcek/: nla_mehurcek.cpp
report/: porocilo.tex
sor/: sor.h  sor_main.cpp
